make small changes

--- a/node_copilot/src/sft/config.yaml
+++ b/node_copilot/src/sft/config.yaml
@@ -1,7 +1,7 @@
 Process:
   SFT:
     Train: True # If set to true, it starts train, esle inference.
-  RewareModel:
+  RewardModel:
     FineTune: False
 
 Model:
