--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,9 @@ dependencies = [
     "pathlib (>=1.0.1,<2.0.0)",
     "datasets (>=4.1.1,<5.0.0)",
     "torch (==2.8.0)",
-    "transformers (>=4.56.2,<5.0.0)"
+    "transformers (>=4.56.2,<5.0.0)",
+    "trl (==0.23.1)",
+    "mlflow (==3.4.0)"
 ]
 
 
