--- a/node_copilot/src/sft/config.yaml
+++ b/node_copilot/src/sft/config.yaml
@@ -5,7 +5,7 @@ Process:
     FineTune: False
 
 Model:
-  model_name: "Qwen/Qwen2.5-Coder-0.5B"
+  model_name: "meta-llama/Llama-3.2-1B-Instruct"
 
 Data:
   dataset_file: "/content/Blender-Node-Copilot/node_copilot/data/training_data.json" # file
@@ -19,6 +19,6 @@ Train:
 Logging:
   logging_steps: 10
   logging_dir: './logs'
-  output_dir: './qwen2.5_0_5b_param'
+  output_dir: './Llama-3.2-1B-Instruct'
   report_to: 'mlflow'
 
