--- a/node_copilot/src/sft/config.yaml
+++ b/node_copilot/src/sft/config.yaml
@@ -5,7 +5,8 @@ Process:
     FineTune: False
 
 Model:
-  model_name: "meta-llama/Llama-3.2-1B" # "Qwen/Qwen2.5-Coder-0.5B"
+  model_name: "meta-llama/Llama-3.2-1B-Instruct" # "Qwen/Qwen2.5-Coder-0.5B"
+  output_dir: "./Llama-3.2-1B-Instruct" # directory to save the fine-tuned model and tokenizer
 
 Data:
   dataset_file: "/content/Blender-Node-Copilot/node_copilot/data/training_data.json" # file
@@ -23,6 +24,6 @@ Train:
 Logging:
   logging_steps: 10
   logging_dir: './logs'
-  output_dir: './Llama-3.2-1B'
+  output_dir: './Llama-3.2-1B-Instruct'
   report_to: 'mlflow'
 
